--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 <div id="menu">
     <ul>
         <li><a href="" title="Upload documenten">Upload documenten</a></li>  
-        <li><a href="" title="Mijn Account">sjdhfs</a></li>';
-		<li><a href="" title="Admin pagina">sljdf</a></li>';
+        <li><a href="" title="Mijn Account">sjdhfs</a></li>
+		<li><a href="" title="Admin pagina">sljdf</a></li>
 		<li><a href="" title="Overig werk">Overig werk</a></li>
 	
 	</ul>
 <br>
 </div>
+</html>
