--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head> 
 	<title>Portfolio</title>
-	<link rel="stylesheet" type="text/css" href="/html/style.css"></link>
+	<link rel="stylesheet" type="text/css" href="style.css"></link>
 
 </head>
 
 <div id="header">
 
 	<div class= "">
-		<a href="/"><img src="/html/blindetenlogo.png"></a>
+		<a href="/"><img src=""></a>
 	</div>
 
 </div>
