--- a/index.html
+++ b/index.html
@@ -6,25 +6,21 @@
 
 </head>
 
-<div id="header">
-
-	<div class= "">
-		<a href="/"><img src=""></a>
-	</div>
-
-</div>
-
+<div class="menucontent">
 <div id="menu">
     <ul>
-        <li><a href="" title="Upload documenten">Upload documenten</a></li>  
+		<div id= "img">
+		<a href="index.html"><img src="uva.gif"></a>
+		</div>
+        <li><a href="upload_documenten.html" title="Upload documenten">Upload documenten</a></li>  
         <li><a href="" title="Mijn Account">sjdhfs</a></li>
 		<li><a href="" title="Admin pagina">sljdf</a></li>
 		<li><a href="" title="Overig werk">Overig werk</a></li>
 		<br>
 		<br>
-		<hr>
 	
 	</ul>
 <br>
+</div>
 </div>
 </html>
