--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <div class="menucontent">
-<div id="menu">
+	<div id="menu">
     <ul>
 		<div id= "img">
 		<a href="index.html"><img src="uva.gif"></a>
@@ -16,11 +16,20 @@
         <li><a href="" title="Mijn Account">sjdhfs</a></li>
 		<li><a href="" title="Admin pagina">sljdf</a></li>
 		<li><a href="" title="Overig werk">Overig werk</a></li>
-		<br>
-		<br>
-	
+		<div id="br_4">
+		</div>
 	</ul>
-<br>
+		<div id="br_8">
+		</div>
+	</div>
 </div>
+
+<h1>Welkom! </h1>
+<div id="br_4">
+</div>
+<div class="text_border">
+<p>Op deze site worden de opdrachten voor het vak Multimedia- en Interactieontwerp geplaatst door Laura Langeveld.</p>
+</div>
+<div id="br_4">
 </div>
 </html>
