--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<a href="index.html"><img src="uva.gif"></a>
 		</div>
         <li><a href="upload_documenten.html" title="Upload documenten">Upload documenten</a></li>  
-        <li><a href="" title="Mijn Account">sjdhfs</a></li>
+        <li><a href="" title="Bekijk documenten">Bekijk documenten</a></li>
 		<li><a href="" title="Admin pagina">sljdf</a></li>
 		<li><a href="" title="Overig werk">Overig werk</a></li>
 		<div id="br_4">
