--- a/index.html
+++ b/index.html
@@ -13,23 +13,19 @@
 		<a href="index.html"><img src="uva.gif"></a>
 		</div>
         <li><a href="upload_documenten.html" title="Upload documenten">Upload documenten</a></li>  
-        <li><a href="" title="Bekijk documenten">Bekijk documenten</a></li>
+        <li><a href="show_files.html" title="Bekijk documenten">Bekijk documenten</a></li>
 		<li><a href="" title="Admin pagina">sljdf</a></li>
 		<li><a href="" title="Overig werk">Overig werk</a></li>
-		<div id="br_4">
-		</div>
+		<div id="br_4"></div>
 	</ul>
-		<div id="br_8">
-		</div>
+		<div id="br_8"></div>
 	</div>
 </div>
 
 <h1>Welkom! </h1>
-<div id="br_4">
-</div>
+<div id="br_4"></div>
 <div class="text_border">
 <p>Op deze site worden de opdrachten voor het vak Multimedia- en Interactieontwerp geplaatst door Laura Langeveld.</p>
-</div>
-<div id="br_4">
+</div><div id="br_4">
 </div>
 </html>
