--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 		<div id= "img">
 		<a href="index.html"><img src="uva.gif"></a>
 		</div>
-        <li><a href="upload_documenten.html" title="Upload documenten">Upload documenten</a></li>  
-        <li><a href="show_files.html" title="Bekijk documenten">Bekijk documenten</a></li>
-		<li><a href="" title="Admin pagina">sljdf</a></li>
+        <li><a href="opdrachten.html" title="Opdrachten">Opdrachten</a></li>
 		<li><a href="" title="Overig werk">Overig werk</a></li>
 		<div id="br_4"></div>
 	</ul>
