--- a/opdrachten.html
+++ b/opdrachten.html
@@ -12,7 +12,6 @@
 		<a href="index.html"><img src="uva.gif"></a>
 		</div>
         <li><a href="opdrachten.html" title="Opdrachten">Opdrachten</a></li>
-		<li><a href="" title="Admin pagina">sljdf</a></li>
 		<li><a href="" title="Overig werk">Overig werk</a></li>
 	<div id="br_4"></div>
 	</ul>
@@ -23,9 +22,17 @@
 
 <h1>Opdrachten </h1>
 <div id="br_4"></div>
-<li><a href="week1.html" title="week 1">Week 1</a></li>
-<li><a href="week2.html" title="week 2">Week 2</a></li>
-<li><a href="week3.html" title="week 3">Week 3</a></li>
-<li><a href="week4.html" title="week 4">Week 4</a></li>
+
+<div class="weekoverzicht">
+	<ul>
+		<li><a href="week1.html" title="week 1">Week 1</a></li>
+		<br>
+		<li><a href="week2.html" title="week 2">Week 2</a></li>
+		<br>
+		<li><a href="week3.html" title="week 3">Week 3</a></li>
+		<br>
+		<li><a href="week4.html" title="week 4">Week 4</a></li>
+	</ul>
+</div>
 </div>
 </html>
