--- a/week1.html
+++ b/week1.html
@@ -25,9 +25,7 @@
 
 <div class="weekoverzicht">
 	<ul>
-		<p>
-		
-		</p>
+		<li><a href="financieel.html" title="financieel plaatje">Financieel plaatje</a></li>
 	</ul>
 </div>
 </div>
